# maxflow_cli

./: .gitignore  CMakeLists.txt  README.md  configure.sh  run.sh
example/: topology.json
src/: graph.hpp  maxflow.cpp  simulator.cpp
